# Daedalus

./: .env.example  .gitignore  AGENTS.md  README.md  design-qa.md  pyproject.toml
cron/: rsps-crewai.cron
docs/: AGENCY_AGENTS_INTEGRATION.md  ANIMATION_RULES.md  ASSET_INVENTORY.md  AUTONOMY.md  BUILD_PLAN.md  COMPONENT_MAP.md  DATA_SCHEMA.md  DEFENSIVE_SECURITY_REVIEW.md  EVALS.md  IMPLEMENTATION_PLAN.md  INTELLIGENCE_ARCHITECTURE.md  INTELLIGENCE_UPGRADES.md  LEGAL_BRANDING.md  MEMORY_SYSTEM.md  OPERATOR_GUIDE.md  ORCHESTRATION.md  PONYTAIL.md  PRIME_SYNTHESIS.md  REPO_MAP.md  RSPS_SOURCE.md  SAFETY_BOUNDARIES.md  STYLE_GUIDE.md  TARGET_ARCHITECTURE.md  TEST_PLAN.md  TODO.md  WORKFLOW.md
evals/: README.md  run_static_evals.py  score_agent_trace.py
memory/: DECISIONS.md  FAILED_ATTEMPTS.md  OPEN_QUESTIONS.md  PROJECT_MEMORY.md  TASK_GRAPH.md
scripts/: dashboard_assets.py  launch_daedalus_studio.sh
skills/daedalus-evals/: SKILL.md
skills/daedalus-orchestration/: SKILL.md
skills/n8n-mcp-automation/: SKILL.md
skills/obsidian-project-memory/: SKILL.md
skills/rsps-java-workflow/: SKILL.md
skills/vibe-kanban-workspaces/: SKILL.md
src/rsps_crewai_team/: __init__.py  crew.py  cron.py  dashboard.py  git_cli.py  main.py  ponytail_cli.py  worker.py
src/rsps_crewai_team/config/: agency_catalog.json  agency_workflows.json  agents.yaml  inspiration_sources.json  profitability_model.json  (+4 more)
tests/: test_agency_config.py  test_coding_worker.py  test_cron_watchdog.py  test_git_sync.py  test_intelligence_configs.py  test_orchestrator.py  test_work_orders_smoke.py
(+33 files in other folders)
